# algae-blooms-dashboard

./: .gitignore  README.md  pyproject.toml
dashboard/: Home.py  config.py
dashboard/components/: __init__.py  filters.py
dashboard/pages/: 1_Data_Explorer.py  2_Time_Series.py  3_Spatial_Analysis.py  4_Enviromental_Factors.py  5_Bloom_Detection.py  5_Statistical_Analysis.py  6_Spatial_And_Bloom_Analysis.py  6_Statistical_Analysis.py  7_Combined_Analysis.py  7_Model_Forecasting.py
dashboard/utils/: __init__.py  data_loader.py  helper.py
training_scripts/: model_testing.py
