[tool.poetry]
name = "algae"
version = "0.1.0"
description = ""
authors = ["Andrea <tosheva.a@buas.nl>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
xarray = ">=2026.1.0,<2027.0.0"
matplotlib = ">=3.10.8,<4.0.0"
cartopy = ">=0.25.0,<0.26.0"
cdsapi = ">=0.7.7,<0.8.0"
pathlib = ">=1.0.1,<2.0.0"
ipykernel = ">=7.1.0,<8.0.0"
h5netcdf = ">=1.8.1,<2.0.0"
netcdf4 = ">=1.7.4,<2.0.0"
dask = ">=2026.1.2,<2027.0.0"
seaborn = ">=0.13.2,<0.14.0"
scipy = ">=1.17.0,<2.0.0"
streamlit = ">=1.54.0,<2.0.0"
plotly = ">=6.5.2,<7.0.0"
scikit-learn = ">=1.8.0,<2.0.0"
huggingface-hub = ">=1.4.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"